# Voting_BIT_KPProject

./: README.md  index.php
config/: db.php
evote/: admin.php  admin_data.php  config.php  crypto.php  index.php  keygen_paillier.php  reset.sql  seed.php  submit.php  verify.php
evote/keys/: paillier_prv.json  paillier_pub.json
evote_bfv/: admin_native.php  config.php  crypto.php  index.php  seed.php  submit.php  test.php  verify.php
evote_bfv/he-bfv/: CMakeLists.txt  main.cpp
evote_bfv/keys_bfv/: public.seal  secret.seal
lib/: encryption.php  hash.php
process/: verify.php
public/: index.php  submit.php
